<resources>
    <string name="app_name">Genius</string>
    <string name="logo_do_jogo">logo_do_jogo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="logar">logar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="nome"> Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="bot_o_de_retorno">Botão de retorno</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="treino">treino</string>
    <string name="versus">versus</string>
    <string name="did_tico">didático</string>
    <string name="sobre">sobre</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="title_activity_didactic">DidacticActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hora_de_estudar">Hora de estudar!</string>
    <string name="para_aprendizagem">PARA APRENDIZAGEM</string>
    <string name="__4">4×</string>
    <string name="conte_dos">+ conteúdos</string>
    <string name="como_funciona">Como funciona?</string>
    <string name="_10">10×</string>
    <string name="__9">9×</string>
    <string name="__5">5×</string>
    <string name="__6">6×</string>
    <string name="__1">1×</string>
    <string name="__2">2×</string>
    <string name="__7">7×</string>
    <string name="__8">8×</string>
    <string name="__3">3×</string>
</resources>