<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <Button
            android:id="@+id/btnT"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="15dp"
            android:text="@string/treino" />
        <Button
            android:id="@+id/btnV"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="15dp"
            android:text="@string/versus" />
        <Button
            android:id="@+id/btnD"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="15dp"
            android:text="@string/did_tico" />
        <Button
            android:id="@+id/btnS"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="15dp"
            android:text="@string/sobre" />
    </LinearLayout>

</FrameLayout>