<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.didactic.DidacticActivity">

        <Button
            android:id="@+id/btnX5"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_marginTop="32dp"
            android:text="@string/__5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnX2" />

        <Button
            android:id="@+id/btnX6"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/__6"
            app:layout_constraintBottom_toBottomOf="@+id/btnX5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/btnX5"
            app:layout_constraintTop_toTopOf="@+id/btnX5"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnX3"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/__3"
            app:layout_constraintBottom_toBottomOf="@+id/btnX2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/btnX2"
            app:layout_constraintTop_toTopOf="@+id/btnX2"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnX1"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/__1"
            app:layout_constraintBottom_toBottomOf="@+id/btnX2"
            app:layout_constraintEnd_toStartOf="@+id/btnX2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnX2"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnX2"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_marginTop="32dp"
            android:text="@string/__2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnX7"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/__7"
            app:layout_constraintBottom_toBottomOf="@+id/btnX8"
            app:layout_constraintEnd_toStartOf="@+id/btnX8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnX8"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnX8"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_marginTop="24dp"
            android:text="@string/__8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnX5" />

        <Button
            android:id="@+id/btnX9"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/__9"
            app:layout_constraintBottom_toBottomOf="@+id/btnX8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/btnX8"
            app:layout_constraintTop_toTopOf="@+id/btnX8"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnX10"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/_10"
            app:layout_constraintBottom_toBottomOf="@+id/btnCF"
            app:layout_constraintEnd_toStartOf="@+id/btnCF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnCF"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCF"
            style="@style/Button"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#3F7397"
            android:text="@string/como_funciona"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnX8"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btnPC"
            style="@style/Button"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:backgroundTint="#3F7397"
            android:text="@string/conte_dos"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnCF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/btnCF"
            app:layout_constraintTop_toTopOf="@+id/btnCF"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btnX4"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/__4"
            app:layout_constraintBottom_toBottomOf="@+id/btnX5"
            app:layout_constraintEnd_toStartOf="@+id/btnX5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnX5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            style="@style/Button"
            android:backgroundTint="#3F7397"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/para_aprendizagem"
            android:fontFamily="@font/lato_regular"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnReturnT"
            style="@style/Button"
            android:contentDescription="@string/hora_de_estudar"
            android:backgroundTint="#3F7397"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="136dp"
            android:layout_height="156dp"
            android:layout_marginStart="28dp"
            android:contentDescription="@string/hora_de_estudar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCF"
            app:layout_constraintVertical_bias="0.714"
            app:srcCompat="@drawable/img0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/hora_de_estudar"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>